Fix: dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,13 @@ body.dark .sidebar {
   background-color: rgb(0, 0, 0);
   color: white;
 }
+body.dark .sidebar-menu-mobile {
+  color: white; 
+  background-color: #333;
+}
+.mobile-sidebar-menu li {
+  border-bottom: 0.1px solid rgba(218, 218, 218, 0.107);
+}
 body.dark .brand-container h1 {
   color: white;
 }
