--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -304,7 +304,7 @@
   display: none; 
   background-color: #fff;
   position: fixed;
-  top: 65px;
+  top: 59px;
   color: black;
   left: 0;
   width: 100%;
@@ -320,6 +320,7 @@
 
 .mobile-sidebar-menu li {
   padding: 15px;
+  border-bottom: 0.1px solid rgba(218, 218, 218, 0.641);
 }
 
 
